# vulkan-boilerplate

./: CMakeLists.txt  main.cpp  readme.md
shaders/: compile.sh
src/: main.cpp
src/common/: Vertex.cpp  Vertex.h  VertexTypes.h
src/core/: VulkanApplication.cpp  VulkanApplication.h  VulkanDevice.cpp  VulkanDevice.h  VulkanInstance.cpp  VulkanInstance.h
src/descriptors/: DescriptorManager.cpp  DescriptorManager.h
src/rendering/: CommandManager.cpp  CommandManager.h  VulkanGraphicsPipeline.cpp  VulkanGraphicsPipeline.h  VulkanSwapchain.cpp  VulkanSwapchain.h
src/resources/: BufferManager.cpp  BufferManager.h  TextureManager.cpp  TextureManager.h
src/ui/: GuiManager.cpp  GuiManager.h
